--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
