--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "test",
   "version": "0.1.0",
+  "homepage": "https://romanshirokov1.github.io/frontend-challenge",
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
@@ -14,6 +16,8 @@
     "zustand": "^5.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
